# autonomous-driving-etl-pipelines

./: README.md
autonomous-driving-etl-pipelines/: LICENSE  README.md  pyproject.toml  requirements.txt
autonomous-driving-etl-pipelines/config/: object_detection.yaml
autonomous-driving-etl-pipelines/docker/: Dockerfile
autonomous-driving-etl-pipelines/etl/: object_detection.py  sensor_fusion.py  trajectory_extraction.py
autonomous-driving-etl-pipelines/examples/: run_pipeline.py
autonomous-driving-etl-pipelines/src/pipelines/: base_pipeline.py  object_detection_pipeline.py  sensor_fusion_pipeline.py
autonomous-driving-etl-pipelines/src/test/: test_object_detection.py
autonomous-driving-etl-pipelines/src/utils/: calibration.py  logging.py
